# SD

./: docker-compose.yml
ChatManagement/: Dockerfile  build.sbt
ChatManagement/app/DTOs/: ConversationDTO.scala  MessageDTO.scala  ParticipantDTO.scala  ReadReceiptDTO.scala
ChatManagement/app/controllers/: HomeController.scala
ChatManagement/app/models/: ConversationsTable.scala  MessagesTable.scala  ParticipantsTable.scala  ReadReceiptsTable.scala  UsersTable.scala
ChatManagement/app/repositories/: TokensRepository.scala  UsersRepository.scala
ChatManagement/app/services/: TokensService.scala  UsersService.scala
ChatManagement/conf/: application.conf  routes
DeviceManagement/: Dockerfile  build.sbt
DeviceManagement/conf/: application.conf  routes
InfoManagement/: .env  Cargo.toml  diesel.toml
InfoManagement/migrations/00000000000000_diesel_initial_setup/: up.sql
InfoManagement/migrations/2024-11-17-001408_create_tables/: up.sql
InfoManagement/src/: main.rs  schema.rs
InfoManagement/src/db/: mod.rs  pool.rs
InfoManagement/src/models/: device.rs  energy.rs  mod.rs
InfoManagement/src/routes/: devices_routes.rs  energy_routes.rs  mod.rs
InfoManagement/src/services/: devices_service.rs  energy_service.rs  mod.rs
UserManagement/: .scalafmt.conf  Dockerfile  Dockerfile1  build.sbt  deploy.sh
UserManagement/conf/: application.conf  routes
client/: Dockerfile  deploy.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  main.jsx
nginx/: nginx.conf
postgres_db/: Dockerfile
(+93 files in other folders)
