[package]
name = "InfoManagement"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-rt = "2.5"
uuid = {version = "1.11.0", features = ["serde", "v4"]}
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
chrono = { version = "0.4.38", features = ["serde"] }